--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </ul>
             </div>
 
-            <button onclick="onClick()" class="open-menu">
+            <button onclick="onClickOpen()" class="open-menu">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10 20H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M10 12H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -95,7 +95,7 @@
                 </svg>
             </button>
 
-            <button onclick="onClick()" class="close-menu">
+            <button onclick="onClickClose()" class="close-menu">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M30 10L10 30M10 10L30 30" stroke="#FFFAF1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>                    
